Add session management and update leaderboard with new entry

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@ Thumbs.db
 dist/
 build/
 
-# Leaderboard data
+# User data
 app/leaderboard.json
+flask_session/
 
 # If using dotenv for secrets
 .env
